Bug 975362 Support the HTTP cache v2 API in the UI r=mcsmurf