mailnews/db/msgdb/public/nsMsgThread.h
@@ -6,6 +6,7 @@
 #ifndef _nsMsgThread_H
 #define _nsMsgThread_H
 
+#include "nsAutoPtr.h"
 #include "nsIMsgThread.h"
 #include "nsStringGlue.h"
 #include "MailNewsTypes.h"
@@ -27,7 +28,7 @@ public:
   NS_DECL_ISUPPORTS
   NS_DECL_NSIMSGTHREAD
 
-  nsCOMPtr<nsMsgDatabase> m_mdbDB;
+  nsRefPtr<nsMsgDatabase> m_mdbDB;
 
 protected:
 
